take-home-assignment-main/kubernetes/ingress.yaml
# Source: vmfarms/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmfarms
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: "viniciusdanone.vmfars.local"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: ssl-redirect
              port:
                name: use-annotation
        - backend:
            service:
              name: vmfarms
              port:
                number: 8080
          path: /
          pathType: Prefix
